# RankySwanky

./: .importlinter  README.md  bradley-terry.py  example_from_readme.py  install_dependencies.md  openskill_example.py  pyproject.toml  test_questions.py  todo.md
.github/agents/: develop.agent.md
.github/skills/snappylapy/: SKILL.md
docs/: Start-Here-How-It-Works.md  openapi.yaml
experimentation/: transitive_reasoning.py
rankyswanky/: __init__.py  aggregated_metrics.py  calculate_metrics.py  exceptions.py  main.py  models_retrieval_eval.py  query_result_builder.py  query_results_builder.py  retrieval_evaluation_models.py  retrieved_documents_for_query_builder.py  search_evaluation_run_builder.py
rankyswanky/adapters/: llm.py  llm_calling.py
rankyswanky/adapters/persistence/: cache_id_strategies.py  caching_models.py  mapper_domain_to_caching_models.py  pydantic_caching.py  repositories_sqllite.py
rankyswanky/application/: cache_aware_evaluation_coordinator.py
rankyswanky/application/builders/: __init__.py  query_results_builder.py  (+2 more)
rankyswanky/builders/: __init__.py  query_results_builder.py  search_evaluation_run_builder.py  search_evaluation_run_director.py
rankyswanky/infrastructure/: mapper_domain_to_caching_models.py
rankyswanky/metrics/: __init__.py  abstract_retrieved_document_metrics.py  aggregated_metrics.py  retrieved_document_metrics.py  retrieved_document_metrics_validation_criteria.py
rankyswanky/models/: __init__.py  adapter_models.py  caching_models.py  connections.py  metric_calculation_models.py  repositories.py  retrieval_evaluation_models.py
rankyswanky/persistence/: pydantic_caching.py
rankyswanky/utils/: __init__.py  retrieved_document_metrics.py  retrieved_document_metrics_validation_criteria.py
tests/: aggregated_metrrics_test.py  conftest.py  main_test.py
tests/mapping/: conftest.py
(+6 files in other folders)
